--- a/clustering/c++/selfOrganizingMaps/Makefile
+++ b/clustering/c++/selfOrganizingMaps/Makefile
@@ -1,4 +1,4 @@
 all: som
 
-som: main.cpp neuron.cpp matrix.cpp SelfOrganizingMaps.cpp
+som: main.cpp neuron.cpp matrix.cpp utils.cpp SelfOrganizingMaps.cpp
 	g++ main.cpp neuron.cpp utils.cpp matrix.cpp SelfOrganizingMaps.cpp -o som -lstdc++ -lglut -lGL -lGLU -lm
