Adding Neuron color in RGB format and updating display function
Adding Neuron color in RGB format and updating display function in order
to display the updated color to make easier to display the BMU when a new
input vector is introduced to test the training.

Signed-off-by: Nelson victor Cruz Hdez <nelson.v.cruz.hernandez@intel.com>

--- a/clustering/c++/selfOrganizingMaps/Makefile
+++ b/clustering/c++/selfOrganizingMaps/Makefile
@@ -1,4 +1,4 @@
 all: som
 
-som: main.cpp neuron.cpp matrix.cpp utils.cpp SelfOrganizingMaps.cpp
-	g++ -std=c++11 main.cpp neuron.cpp utils.cpp matrix.cpp SelfOrganizingMaps.cpp -o som -lstdc++ -lglut -lGL -lGLU -lm
+som: main.cpp neuron.cpp matrix.cpp utils.cpp SelfOrganizingMaps.cpp RGB.cpp
+	g++ -std=c++11 main.cpp neuron.cpp utils.cpp matrix.cpp SelfOrganizingMaps.cpp RGB.cpp -o som -lstdc++ -lglut -lGL -lGLU -lm
